--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -11,15 +11,20 @@ section{
 
 .hero--photo{
 
- max-width:400px;
+ max-width:900px;
  align-self:center;
  
 }
 
 .hero--header{
     margin-bottom: 16px;
+    font-size: 40px;
+    margin-left: 40px;
+    margin-top: 100px;
 }
 .hero--text{
     margin-top:0px;
+    font-size: 25px;
+    margin-left: 40px;
 }
 
